complete 1280px homepage style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -598,6 +598,18 @@ body {
   height: 240px;
 }
 
+@media (min-width: 1280px) {
+  .page main .service-item {
+    height: 210px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .page main .service-item {
+    height: 240px;
+  }
+}
+
 .page main .service-item .item-hover-back {
   background: -webkit-gradient(linear, left top, left bottom, from(#09133a), to(#070e28));
   background: linear-gradient(to bottom, #09133a 0%, #070e28 100%);
@@ -671,22 +683,22 @@ body {
           flex: 1;
 }
 
-.page main .service-item .text-item p {
+.page main .service-item .text-item h3 {
   font-size: 20px;
   font-family: "Gotham Bold";
+  font-weight: bold;
   white-space: pre-wrap;
   color: #fff;
 }
 
-@media (min-width: 1366px) {
-  .page main .service-item .text-item p {
-    font-size: 20px;
-    font-weight: bold;
+@media (min-width: 1280px) {
+  .page main .service-item .text-item h3 {
+    font-size: 14px;
   }
 }
 
-@media (min-width: 1920px) {
-  .page main .service-item .text-item p {
+@media (min-width: 1366px) {
+  .page main .service-item .text-item h3 {
     font-size: 20px;
   }
 }
@@ -703,6 +715,12 @@ body {
   white-space: pre-wrap;
   color: #9da6c7;
   font-weight: 100;
+}
+
+@media (min-width: 1280px) {
+  .page main .service-item .description p {
+    font-size: 12px;
+  }
 }
 
 @media (min-width: 1366px) {
@@ -774,11 +792,23 @@ body {
           flex: 1;
 }
 
-.page main .badge-item .badge-title p {
+.page main .badge-item .badge-title h3 {
   font-size: 16px;
   white-space: pre-wrap;
   font-family: "Gotham Bold";
   color: #fff;
+}
+
+@media (min-width: 1280px) {
+  .page main .badge-item .badge-title h3 {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .page main .badge-item .badge-title h3 {
+    font-size: 20px;
+  }
 }
 
 .page main .badge-item .badge-description {
@@ -793,11 +823,13 @@ body {
   font-weight: 100;
 }
 
-@media (min-width: 1920px) {
-  .page main .badge-item .badge-title p {
-    font-size: 20px;
+@media (min-width: 1280px) {
+  .page main .badge-item .badge-description p {
+    font-size: 12px;
   }
+}
 
+@media (min-width: 1920px) {
   .page main .badge-item .badge-description p {
     font-size: 16px;
   }
@@ -814,6 +846,18 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   border-radius: 5px;
+}
+
+@media (min-width: 1280px) {
+  .page main .portfolio-item {
+    height: 220px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .page main .portfolio-item {
+    height: 300px;
+  }
 }
 
 .page main .portfolio-item .portfolio {
@@ -846,9 +890,17 @@ body {
   left: 40px;
 }
 
+@media (min-width: 1280px) {
+  .page main .portfolio-item .portfolio .avatar img {
+    top: -30px;
+    left: 30px;
+  }
+}
+
 @media (min-width: 1920px) {
   .page main .portfolio-item .portfolio .avatar img {
     left: 100px;
+    top: 0px;
   }
 }
 
@@ -865,18 +917,41 @@ body {
 
 .page main .portfolio-item .portfolio .hover-texts p {
   text-align: center;
+  font-family: "Gotham Bold";
 }
 
 .page main .portfolio-item .portfolio .hover-texts p.hover-title {
   color: #fff;
   font-size: 20px;
-  font-family: "Gotham Bold";
   margin-bottom: 0;
+}
+
+@media (min-width: 1280px) {
+  .page main .portfolio-item .portfolio .hover-texts p.hover-title {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .page main .portfolio-item .portfolio .hover-texts p.hover-title {
+    font-size: 20px;
+  }
 }
 
 .page main .portfolio-item .portfolio .hover-texts p.hover-des {
   color: #8341ff;
-  font-family: "Gotham Bold";
+}
+
+@media (min-width: 1280px) {
+  .page main .portfolio-item .portfolio .hover-texts p.hover-des {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .page main .portfolio-item .portfolio .hover-texts p.hover-des {
+    font-size: 16px;
+  }
 }
 
 .page main .portfolio-item .portfolio-text {
@@ -1105,6 +1180,20 @@ body {
   color: #9aa2bf;
 }
 
+@media (min-width: 1280px) {
+  .page main .news-item .news-content p.title {
+    font-size: 14px;
+  }
+
+  .page main .news-item .news-content p.category {
+    font-size: 12px;
+  }
+
+  .page main .news-item .news-content p.normal {
+    font-size: 12px;
+  }
+}
+
 @media (min-width: 1366px) {
   .page main .news-item .news-content p.title {
     font-size: 20px;
@@ -1128,6 +1217,18 @@ body {
 
 .page main .news-item .news-content .news-icon-arrow i {
   color: #7436e9;
+}
+
+@media (min-width: 1280px) {
+  .page main .news-item {
+    height: 300px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .page main .news-item {
+    height: 340px;
+  }
 }
 
 .page main .guide-card {
@@ -3598,6 +3699,445 @@ body {
   }
 }
 
+@media (min-width: 1280px) {
+  .segment.navbar .nav-color {
+    font-size: 13px;
+    padding: 22px 8px 22px 8px !important;
+  }
+
+  .segment.navbar .nav-color .text {
+    padding-top: 0px;
+  }
+
+  .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item .text-item p {
+    font-size: 12px;
+  }
+
+  .segment.navbar .menu .custom-row .custom-dropdown .custom-dropdown-item .description p {
+    font-size: 9px;
+  }
+
+  .page main .divide {
+    height: 140px;
+  }
+
+  .page main .main-footer {
+    min-height: 350px;
+    height: auto;
+    width: 100%;
+    background-size: cover !important;
+    margin-top: 50px;
+  }
+
+  .page main .main-footer .main-footer-description {
+    display: inline-block;
+    margin-top: 100px;
+    padding-top: 100px;
+    width: 50%;
+    color: #fff;
+  }
+
+  .page main .main-footer .main-footer-description .register {
+    padding: 15px 85px;
+    margin-bottom: 10px;
+  }
+
+  .page main .main-footer .main-footer-description .item-link {
+    text-decoration: underline;
+  }
+
+  .page main .main-footer .main-footer-description p {
+    font-size: 13px;
+  }
+
+  .page main .main-footer .main-footer-description h3 {
+    text-align: left;
+  }
+
+  .page main .home-page .homepage-header {
+    height: 560px;
+  }
+
+  .page main .home-page .homepage-header .homepage-header-description {
+    margin-top: 110px;
+    width: 50%;
+  }
+
+  .page main .home-page .homepage-header .homepage-header-description h2 {
+    font-size: 36px;
+  }
+
+  .page main .home-page .homepage-header .homepage-header-description .title {
+    font-size: 16px;
+  }
+
+  .page main .home-page .homepage-header .homepage-header-description .normal {
+    font-size: 12px;
+  }
+
+  .page main .home-page .homepage-header .homepage-header-description .homepage-header-buttons .register {
+    padding: 15px 70px 15px 70px;
+    font-size: 14px !important;
+    margin-bottom: 10px;
+  }
+
+  .page main .home-page .home-estimation h2 {
+    font-size: 24px;
+  }
+
+  .page main .home-page .home-estimation .home-estimation-description p {
+    font-size: 14px;
+  }
+
+  .page main .home-page .home-estimation .home-button-group .button {
+    font-size: 14px !important;
+    width: auto;
+    padding: 15px 40px 15px 40px !important;
+  }
+
+  .page main .home-page .home-estimation .home-button-group .button.primary-button {
+    margin-right: 20px;
+  }
+
+  .page main .home-page .home-section:nth-of-type(1) {
+    margin-top: 0;
+  }
+
+  .page main .home-page .home-section h2 {
+    font-size: 24px;
+  }
+
+  .page main .home-page .home-section .portfolio-item-observer {
+    height: 100%;
+  }
+
+  .page main .home-page .home-section .alice-carousel {
+    margin-left: 135px;
+  }
+
+  .page main .home-page .home-section .alice-carousel .alice-carousel__stage-item {
+    width: 331.333px !important;
+  }
+
+  .page main .home-page .home-section .alice-carousel_prev_btn,
+  .page main .home-page .home-section .alice-carousel_next_btn {
+    left: 80px;
+    display: block;
+  }
+
+  .page main .portfolio-page .portfolio-header {
+    height: 550px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient {
+    height: 550px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description {
+    padding: 100px 150px 100px 150px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-text p {
+    font-size: 20px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure .figure p {
+    font-size: 16px;
+    font-family: "Gotham Bold";
+  }
+
+  .page main .portfolio-page .portfolio-studios {
+    margin-top: -50px;
+    margin-bottom: 0px;
+  }
+
+  .page main .portfolio-page .portfolio-studios a {
+    text-decoration: none;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header {
+    min-height: 550px;
+    height: 550px;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient {
+    height: 610px;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .header-description .header-text {
+    padding-bottom: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .header-description .header-text h2 {
+    font-size: 36px;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .header-description .header-text p {
+    font-size: 18px;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .image-group {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .image-group img {
+    width: 100%;
+  }
+
+  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .image-group img.sub-img {
+    width: 130px;
+  }
+
+  .page main .singlePortfolio-page .portfolio-section.review .review-item {
+    width: 280px;
+    left: 40%;
+    padding: 30px 20px 40px 20px;
+  }
+
+  .page main .singlePortfolio-page .portfolio-section .service {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .page main .singlePortfolio-page .alert-notice {
+    padding-top: 320px;
+  }
+
+  .page main .about-page .about-header {
+    height: 530px;
+  }
+
+  .page main .about-page .about-header .header-gradient {
+    height: 580px;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .counter-box {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .header-text p {
+    font-size: 14px;
+  }
+
+  .page main .about-page .about-section:nth-of-type(2) {
+    margin-top: 0px;
+  }
+
+  .page main .about-page .about-section:nth-of-type(5) {
+    padding-bottom: 150px;
+  }
+
+  .page main .contact-page .contact-header {
+    height: 560px;
+  }
+
+  .page main .contact-page .contact-header .header-gradient {
+    height: 600px;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .header-description .header-text {
+    padding-left: 180px;
+    padding-right: 180px;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .header-description .header-text p {
+    font-size: 14px;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .row .column:first-child {
+    padding-left: 0;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .row .column:last-child {
+    padding-right: 0;
+  }
+
+  .page main .contact-page .contact-section {
+    margin-top: 0px;
+  }
+
+  .page main .contact-page .contact-section .message-form .form-group {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section .terms-section {
+    padding-left: 5px;
+  }
+
+  .page main .contact-page .contact-section .message-form label {
+    font-size: 12px;
+  }
+
+  .page main .contact-page .contact-section .message-form .phone-form .react-phone-number-input__phone {
+    margin-top: 7px !important;
+    padding: 12px 8px !important;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section .terms-section {
+    margin-top: 10px;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section .terms-section a {
+    font-size: 12px;
+  }
+
+  .page main .contact-page .contact-section .message-form .primary-button {
+    width: 50%;
+  }
+
+  .page main .service-page .service-header {
+    height: 660px;
+  }
+
+  .page main .service-page .service-header .header-gradient {
+    height: 700px;
+  }
+
+  .page main .service-page .service-header .header-gradient .custom-col-6 .custom-col-6 {
+    width: 60% !important;
+    margin: inherit !important;
+    padding: inherit;
+  }
+
+  .page main .service-page .service-header .header-gradient .custom-col-6 .custom-col-8 {
+    width: 80% !important;
+    margin: inherit !important;
+    padding: inherit;
+  }
+
+  .page main .service-page .service-header .header-gradient .header-description .header-text {
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+
+  .page main .service-page .service-header .header-gradient .header-description .header-text p {
+    font-size: 12px;
+  }
+
+  .page main .service-page .service-header .header-gradient .starter-group h3 {
+    text-align: center;
+  }
+
+  .page main .service-page .service-header .header-gradient .figures .figure {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .page main .service-page .service-header .header-gradient .figures .figure p {
+    font-size: 12px;
+  }
+
+  .page main .service-page .service-header .header-gradient.mobile .figures .figure {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .page main .service-page .service-header .header-gradient.mobile .starter-group {
+    margin-top: 70px;
+  }
+
+  .page main .service-page .service-header .header-gradient.mobile .starter-group .service-item .text-item p {
+    font-size: 13px;
+  }
+
+  .page main .service-page .service-section.review {
+    min-height: 100vh;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background: url(/images/illustration-dev-back.png) center center/100% 100% no-repeat;
+    margin-top: 50px;
+  }
+
+  .page main .service-page .service-section.review .custom-col-4 {
+    width: 40% !important;
+    margin: inherit !important;
+  }
+
+  .page main .service-page .service-section.review .service-review {
+    padding-top: 200px;
+  }
+
+  .page main .service-page .service-section.review .service-review .third-button {
+    font-size: 12px !important;
+  }
+
+  .page main .service-page .service-section.branding {
+    margin-top: 240px;
+  }
+
+  .page main .service-page .service-section.tech h3 {
+    text-align: center;
+  }
+
+  .page main .service-page .service-estimation .service-estimation-description h3 {
+    text-align: center;
+  }
+
+  .page main .service-page .service-estimation .service-estimation-description p {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .page main .login-page {
+    min-height: 110vh;
+  }
+
+  .page main .login-page.register {
+    min-height: 150vh;
+  }
+
+  .page main .login-page.register .login-responsive {
+    max-width: 450px;
+  }
+
+  .page main .login-page .login-responsive {
+    max-width: 450px;
+  }
+
+  .footer {
+    min-height: 66vh;
+  }
+
+  .footer img {
+    width: 30px !important;
+  }
+
+  .footer h5 {
+    text-align: right;
+    font-size: 16px;
+    margin-bottom: 0px;
+    margin-top: 5px;
+  }
+}
+
 @media (min-width: 1366px) {
   .segment.navbar .nav-color {
     padding: 22px 8px 22px 8px !important;
@@ -4059,16 +4599,8 @@ body {
     font-size: 12px;
   }
 
-  .page p {
-    font-size: 16px;
-  }
-
-  .page h3 {
-    font-size: 36px;
-  }
-
   .page main .divide {
-    height: 211px;
+    height: 200px;
   }
 
   .page main .main-footer {
@@ -4130,6 +4662,14 @@ body {
     font-size: 18px !important;
   }
 
+  .page main .home-page .home-estimation h2 {
+    font-size: 36px;
+  }
+
+  .page main .home-page .home-estimation .home-estimation-description p {
+    font-size: 18px;
+  }
+
   .page main .home-page .home-estimation .badge-item .badge-description {
     text-align: left;
   }
@@ -4151,7 +4691,7 @@ body {
     margin-top: 35px;
   }
 
-  .page main .home-page .home-section h3 {
+  .page main .home-page .home-section h2 {
     font-size: 36px;
   }
 
