--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4085,6 +4085,9 @@ body {
         .portfolio-studios {
           margin-top: -350px;
           margin-bottom: 0px;
+          h2 {
+            font-size: 36px;
+          }
           a {
             text-decoration: none;
           }
